// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary one and columnist - small 1`] = `
<View>
  <Text>
    secondary
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    columnist
  </Text>
</View>
`;

exports[`2. secondary one and columnist - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 20,
    }
  }
>
  <View
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <Text>
      columnist
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 15,
      }
    }
  />
  <View
    style={
      Object {
        "paddingVertical": 5,
        "width": "25%",
      }
    }
  >
    <Text>
      secondary
    </Text>
  </View>
</View>
`;
